fix: Make padding aligned with elements above

--- a/src/app/styles/SettingsPage.css
+++ b/src/app/styles/SettingsPage.css
@@ -1,7 +1,8 @@
 .SettingsPage {
     min-height: 75px;
     flex-grow: 1;
-    padding: 20px;
+    padding-block: 20px;
+    padding-inline: 12px;
     background-color: #1E1E1E;
     margin-bottom: 20px;
     margin-top: 20px;
